--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,7 +118,7 @@ a {
   }
 
 /* Section 2 */
-.container-two {
+#view-port-three {
   background-color: #E2E6E9;
 }
 
@@ -354,6 +354,7 @@ body {
   margin:auto;
   justify-content: space-between;
 }
+
 .finsweet-ratings {
   margin-top: 5%;
 }
@@ -389,84 +390,155 @@ body {
   width: 75%;
 }
 
-.page-first {
-  background-color: #1E1B1B;
+/* MOBILE VIEW */
+@media (max-width:425px) {
+  .container, .container-two {
+    width: 100%;
+    margin: 0 auto;
+    }
+
+    .part-one img {
+      width:80px;
+    }
+  
+    .links, .part-three {
+      display: none;
+    }
+  
+    .header-one {
+      flex-direction: column;
+      align-items: flex-start;
+  
+    }
+  
+    .header-one .image-part {
+      order: 1;
+      width: 100%;
+      align-items: flex-start;
+    }
+  
+    .header-one .image-part img {
+      width: 95vw;
+    }
+  
+    .button {
+      margin: 30px;
+    }
+  
+    .image-part .form-container .button a {
+      display: inline-block;
+      margin-top: 2%;
+      margin-right: 15%;
+      background: #FF6433;
+      border-radius: 10px;
+      padding: 20px;
+      color: white;
+  }
+  
+    .header-one .text-part {
+      order: 2;
+      width: 100%;
+      text-align: center;
+    }
+  
+    .header-one .text-part h1, .image-part p{
+      text-align: center;
+      font-size: 30px;
+      font-weight: bold;
+    }
+  
+    .header-one .text-part a {
+      display: inline-block;
+      align-items: center;
+      background: #FF6433;
+      border-radius: 10px;
+      padding: 20px;
+      color: white;
+  }
+  
+  .text-part .acess-point, .text-part .flex-one {
+    flex-direction: column;
+  }
+  
+  .flex-one .area {
+    margin: 5px 0 ;
+  }
+  
+  .flex-one h3, h4 {
+    font-weight: lighter;
+  }
+  
+  .row-one, .flex-aligned {
+    width: 100%;
+  }
+
+  .row-one-text h2 {
+    font-size: 40px;
+  }
+  
+  #our-forte {
+    width: 100%;
+  }
+  
+  #our-forte h2 {
+    width: 60%;
+    text-align: center;
+    padding-top: 20px;
+    margin: 0 auto 40px auto;
+    font-size: 30px;
+  }
+  
+  .container-two .text-part {
+    order: 1;
+  }
+  
+  .container-two .image-part {
+    order: 2;
+  }
+  
+  input[type="text"] {
+    width: 100%;
+    height: 60px;
+    margin-top: 3px;
+    border: none;
+    font-size: 16px;
+  }
+
+  .flex-properties {
+    width: 100%;
+  }
+
+  .row-two h4 {
+    padding: 10px 10px;
+    font-size: 16px;
+    margin: 10px o;
 }
 
-.parts-one, .parts-two {
-  width: 40%;
-  margin-top: 10%;
-}
-
-.parts-one h1 {
-font-weight: 500;
-font-size: 45px;
-color: #ffffff;
-}
-
-.parts-two p {
-  margin-bottom: 3%;
-  color: #ffffff;
-}
-
-.parts-two h2 {
-  margin-bottom: 5%;
-  color: #ffffff;
-}
-
-@media (max-width: 426px) {
-.container {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.header-one .part-one img {
-  width: 60%;
-}
-
-.header-one .part-two {
+.row-two .button {
   display: none;
-  flex-direction: column;
 }
 
-.header-one .text-part h1 {
-  font-size: 20px;
-  font-weight: bold;
+.rating-amount  {
+  width: 100%;
+  font-size: 30px;
+  text-align: center;
 }
 
-.text-part a {
-  background: #FF6433;
-  border-radius: 5px;
-  padding: 10px;
-  color: white;
+.flex-properties p {
+  text-align: center;
 }
 
-
-
-.acess-point {
-  justify-content: left;
-  margin-top: 8%;
-
+.brand-div {
+  width: 100vw;
 }
 
-.acess-point img {
-  height: 5%;
-  color: #939191;
+.brands h2 {
+  text-align: center;
 }
 
-.acess-point p {
-  color: #939191;
+.brands .brand-div {
+flex-direction: column;
+align-items: center;
 }
-
-}
-
-
-
-
-
-
-
-
-
-
-
+  }
+  
