--- a/CSS/style.css
+++ b/CSS/style.css
@@ -508,11 +508,12 @@ body {
     width: 100%;
   }
 
+  .flex-box {
+    width: 100%;
+  }
+
   .row-two .flexbox-text h4 {
-    display: inline-block;
-    padding: 10px 10px;
-    font-size: 16px;
-    margin: 10px o;
+    display: none;
 }
 
 .row-two .button {
@@ -541,5 +542,6 @@ body {
 flex-direction: column;
 align-items: center;
 }
-  }
+
+}
   
