--- a/CSS/style.css
+++ b/CSS/style.css
@@ -392,9 +392,6 @@ body {
 
 /* MOBILE VIEW */
 @media (max-width:426px) {
-  .main-section {
-    margin-left: 12px;
-  }
 
   .container, .container-two {
     width: 100%;
@@ -550,4 +547,38 @@ align-items: center;
 }
 
 }
-  
+
+/* TABLET VIEW */
+
+@media (max-width: 769px) {
+  .container {
+    width: 90%;
+  }
+
+  .header-one {
+    flex-direction: column;
+  }
+
+  .form-container button a {
+    padding: 20px 5px;
+  }
+
+  .rating-amount {
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .flex-properties {
+    text-align: center;
+  }
+
+  .flexbox-text {
+    display: none;
+  }
+
+  .brands .brand-div {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+    
